--- a/HackathonT4/HackathonT4.csproj
+++ b/HackathonT4/HackathonT4.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.KernelMemory.Abstractions" Version="0.34.240313.1" />
+    <PackageReference Include="Microsoft.KernelMemory.Core" Version="0.34.240313.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
