--- a/HackathonT4/appsettings.json
+++ b/HackathonT4/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiKey": "34eb510f232e4ef5a33c7600fe54a266"
 }
